sfSandBoxCode/force-app/main/default/objects/Loans_Outstanding__c/Loans_Outstanding__c.object-meta.xml
<CustomObject>
    <label>Loan Outstanding</label>
    <nameField>
        <label>Loans Outstanding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loans Outstanding</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>