sfSandBoxCode/force-app/main/default/objects/Loans_Outstanding__c/fields/Collateral_Offered__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Offered__c</fullName>
    <label>Collateral Offered</label>
    <length>60</length>
    <type>Text</type>
</CustomField>