sfSandBoxCode/force-app/main/default/objects/Loans_Outstanding__c/fields/Date_Loan_Granted__c.field-meta.xml
<CustomField>
    <fullName>Date_Loan_Granted__c</fullName>
    <label>Date Loan Granted</label>
    <type>Date</type>
</CustomField>