sfSandBoxCode/force-app/main/default/objects/Loans_Outstanding__c/fields/Financial_Institution__c.field-meta.xml
<CustomField>
    <fullName>Financial_Institution__c</fullName>
    <label>Financial Institution</label>
    <length>60</length>
    <type>Text</type>
</CustomField>