sfSandBoxCode/force-app/main/default/objects/Loans_Outstanding__c/fields/Loan_Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_Name__c</fullName>
    <label>Loan Application Name</label>
    <referenceTo>Loan_Application_Form__c</referenceTo>
    <relationshipLabel>Loans Outstanding</relationshipLabel>
    <relationshipName>Loans_Outstanding</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>