sfSandBoxCode/force-app/main/default/objects/Loans_Outstanding__c/fields/Monthly_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Repayment__c</fullName>
    <label>Monthly Repayment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>