sfSandBoxCode/force-app/main/default/objects/Loans_Outstanding__c/fields/Present_Balance__c.field-meta.xml
<CustomField>
    <fullName>Present_Balance__c</fullName>
    <label>Present Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>